crates/ruff_python_parser/tests/snapshots/invalid_syntax@type_params_empty.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/type_params_empty.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(
            14,
        ),
        range: 0..52,
        body: [
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(
                        4,
                    ),
                    range: 0..21,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 4..7,
                        node_index: NodeIndex(
                            0,
                        ),
                    },
                    type_params: Some(
                        TypeParams {
                            range: 7..9,
                            node_index: NodeIndex(
                                1,
                            ),
                            type_params: [],
                        },
                    ),
                    parameters: Parameters {
                        range: 9..11,
                        node_index: NodeIndex(
                            2,
                        ),
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Pass(
                            StmtPass {
                                node_index: NodeIndex(
                                    3,
                                ),
                                range: 17..21,
                            },
                        ),
                    ],
                },
            ),
            TypeAlias(
                StmtTypeAlias {
                    node_index: NodeIndex(
                        13,
                    ),
                    range: 22..51,
                    name: Name(
                        ExprName {
                            node_index: NodeIndex(
                                6,
                            ),
                            range: 27..36,
                            id: Name("ListOrSet"),
                            ctx: Store,
                        },
                    ),
                    type_params: Some(
                        TypeParams {
                            range: 36..38,
                            node_index: NodeIndex(
                                7,
                            ),
                            type_params: [],
                        },
                    ),
                    value: BinOp(
                        ExprBinOp {
                            node_index: NodeIndex(
                                12,
                            ),
                            range: 41..51,
                            left: Name(
                                ExprName {
                                    node_index: NodeIndex(
                                        9,
                                    ),
                                    range: 41..45,
                                    id: Name("list"),
                                    ctx: Load,
                                },
                            ),
                            op: BitOr,
                            right: Name(
                                ExprName {
                                    node_index: NodeIndex(
                                        11,
                                    ),
                                    range: 48..51,
                                    id: Name("set"),
                                    ctx: Load,
                                },
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | def foo[]():
  |         ^ Syntax Error: Type parameter list cannot be empty
2 |     pass
3 | type ListOrSet[] = list | set
  |


  |
1 | def foo[]():
2 |     pass
3 | type ListOrSet[] = list | set
  |                ^ Syntax Error: Type parameter list cannot be empty
  |
